fixed article broken link to articles.hhtml

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="hero-content">
                 <h2>Securing the Digital Future</h2>
                 <p>Expert insights on Cybersecurity, AI, and Full-Stack Development</p>
-                <a href="blog.html" class="btn">Explore Articles</a>
+                <a href="articles.html" class="btn">Explore Articles</a>
             </div>
         </div>
     </section>
