added header sections

--- a/about.html
+++ b/about.html
@@ -6,7 +6,27 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <!-- Navbar -->
+   <!-- Header -->
+    <header class="main-header">
+        <div class="container">
+            <div class="logo">
+                <h1>Tech<span>Insight</span></h1>
+            </div>
+            <nav>
+                <ul class="nav-menu">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="cybersecurity.html" class="active">CyberSecurity</a></li>
+                    <li><a href="ai.html">AI/ML</a></li>
+                    <li><a href="fullstack.html">Full Stack</a></li>
+                </ul>
+                <div class="hamburger">
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                </div>
+            </nav>
+        </div>
+    </header>
   <main>
     <h1>About Tech Insight</h1>
     <p>Welcome to Tech Insight, your go-to blog for AI, Cybersecurity, and Full-Stack development. Built with HTML5, CSS3, and JavaScript, this site showcases responsive design and interactive features.</p>
