--- a/fullstack.html
+++ b/fullstack.html
@@ -8,8 +8,27 @@
     <script src="https://kit.fontawesome.com/your-kit-code.js"></script>
 </head>
 <body>
-    <!-- Reuse header structure -->
-
+  <!-- Header -->
+    <header class="main-header">
+        <div class="container">
+            <div class="logo">
+                <h1>Tech<span>Insight</span></h1>
+            </div>
+            <nav>
+                <ul class="nav-menu">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="cybersecurity.html" class="active">CyberSecurity</a></li>
+                    <li><a href="ai.html">AI/ML</a></li>
+                    <li><a href="fullstack.html">Full Stack</a></li>
+                </ul>
+                <div class="hamburger">
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                </div>
+            </nav>
+        </div>
+    </header>
     <main class="container">
         <section class="category-hero">
             <h1>Full Stack Engineering</h1>
