--- a/articles.html
+++ b/articles.html
@@ -6,8 +6,29 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <!-- Include your navbar here -->
-  <main>
+ <!-- Header -->
+    <header class="main-header">
+        <div class="container">
+            <div class="logo">
+                <h1>Tech<span>Insight</span></h1>
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="articles.html">Articles</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+
+                <div class="hamburger">
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                </div>
+            </nav>
+        </div>
+    </header>
+      <main>
     <h1>Articles</h1>
     <section class="card-container">
       <article class="card">
