--- a/articles.html
+++ b/articles.html
@@ -1,49 +1,123 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Articles – Tech Insight</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <meta charset="UTF-8" />
+  <meta
+    name="viewport"
+    content="width=device-width, initial-scale=1.0"
+  />
+  <title>Articles – TechInsight</title>
+  <link rel="stylesheet" href="css/main.css" />
+  <script
+    src="https://kit.fontawesome.com/your-kit-code.js"
+    crossorigin="anonymous"
+  ></script>
 </head>
-<body>
- <!-- Header -->
-    <header class="main-header">
-        <div class="container">
-            <div class="logo">
-                <h1>Tech<span>Insight</span></h1>
-            </div>
-            <nav>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="articles.html">Articles</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>
 
-                <div class="hamburger">
-                    <span class="bar"></span>
-                    <span class="bar"></span>
-                    <span class="bar"></span>
-                </div>
-            </nav>
-        </div>
-    </header>
-      <main>
-    <h1>Articles</h1>
-    <section class="card-container">
-      <article class="card">
-        <h2><a href="ai.html">AI</a></h2>
-        <p>A deep dive into the latest in artificial intelligence.</p>
-      </article>
-      <article class="card">
-        <h2><a href="cybersecurity.html">Cybersecurity</a></h2>
-        <p>Best practices and trends in keeping data safe.</p>
-      </article>
-      <article class="card">
-        <h2><a href="fullstack.html">Full-Stack</a></h2>
-        <p>Building end-to-end web applications.</p>
-      </article>
+<body>
+  <!-- Theme Toggle -->
+  <button
+    id="theme-button"
+    class="theme-toggle"
+    aria-label="Toggle dark/light theme"
+  >
+    <i class="fas fa-moon"></i>
+  </button>
+
+  <!-- Header -->
+  <header class="main-header">
+    <div class="container">
+      <div class="logo">
+        <h1>Tech<span>Insight</span></h1>
+      </div>
+
+      <nav class="nav" aria-label="Main navigation">
+        <ul>
+          <li><a href="index.html">Home</a></li>
+
+          <!-- Articles dropdown -->
+          <li class="dropdown">
+            <a href="articles.html" aria-haspopup="true" aria-expanded="true">
+              Articles <i class="fas fa-caret-down"></i>
+            </a>
+            <ul class="dropdown-menu" aria-label="submenu">
+              <li><a href="cybersecurity.html">Cybersecurity</a></li>
+              <li><a href="ai.html">AI</a></li>
+              <li><a href="fullstack.html">Full-Stack</a></li>
+            </ul>
+          </li>
+
+          <li><a href="about.html">About</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+
+        <button
+          class="hamburger"
+          aria-label="Toggle menu"
+          aria-expanded="false"
+        >
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </button>
+      </nav>
+    </div>
+  </header>
+
+  <!-- Articles Overview -->
+  <main class="container">
+    <section class="articles-overview">
+      <h1>All Articles</h1>
+      <div class="article-grid">
+        <!-- AI -->
+        <article class="article-card">
+          <div class="article-content">
+            <span class="category-tag ai">AI</span>
+            <h3>Artificial Intelligence</h3>
+            <p>
+              Dive into cutting-edge AI research, deep learning breakthroughs,
+              and practical implementations shaping the future of technology.
+            </p>
+            <a href="ai.html" class="read-more"
+              >Explore AI Articles <i class="fas fa-arrow-right"></i
+            ></a>
+          </div>
+        </article>
+
+        <!-- Cybersecurity -->
+        <article class="article-card">
+          <div class="article-content">
+            <span class="category-tag cyber">Cybersecurity</span>
+            <h3>Cybersecurity</h3>
+            <p>
+              Learn best practices, threat analyses, and strategies to secure
+              networks, applications, and data in an increasingly connected world.
+            </p>
+            <a href="cybersecurity.html" class="read-more"
+              >Explore Cybersecurity Articles <i class="fas fa-arrow-right"></i
+            ></a>
+          </div>
+        </article>
+
+        <!-- Full-Stack -->
+        <article class="article-card">
+          <div class="article-content">
+            <span class="category-tag fullstack">Full-Stack</span>
+            <h3>Full-Stack Development</h3>
+            <p>
+              From frontend frameworks to backend APIs and deployment pipelines,
+              master the art of building end-to-end web applications.
+            </p>
+            <a href="fullstack.html" class="read-more"
+              >Explore Full-Stack Articles <i class="fas fa-arrow-right"></i
+            ></a>
+          </div>
+        </article>
+      </div>
     </section>
   </main>
+
+  <script src="js/theme.js"></script>
+  <script src="js/main.js"></script>
 </body>
 </html>
