--- a/cybersecurity.html
+++ b/cybersecurity.html
@@ -1,90 +1,131 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CyberSecurity Insights | TechBlog</title>
-    <link rel="stylesheet" href="css/main.css">
-    <script src="https://kit.fontawesome.com/your-kit-code.js"></script>
+  <meta charset="UTF-8" />
+  <meta
+    name="viewport"
+    content="width=device-width, initial-scale=1.0"
+  />
+  <title>CyberSecurity Essentials – TechInsight</title>
+  <link rel="stylesheet" href="css/main.css" />
+  <script
+    src="https://kit.fontawesome.com/your-kit-code.js"
+    crossorigin="anonymous"
+  ></script>
 </head>
+
 <body>
-    <!-- Theme Toggle -->
-    <div class="theme-toggle">
-        <button id="theme-button"><i class="fas fa-moon"></i></button>
+  <!-- Theme Toggle -->
+  <button
+    id="theme-button"
+    class="theme-toggle"
+    aria-label="Toggle dark/light theme"
+  >
+    <i class="fas fa-moon"></i>
+  </button>
+
+  <!-- Header -->
+  <header class="main-header">
+    <div class="container">
+      <div class="logo">
+        <h1>Tech<span>Insight</span></h1>
+      </div>
+
+      <nav class="nav" aria-label="Main navigation">
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          
+          <!-- Articles dropdown -->
+          <li class="dropdown">
+            <a href="articles.html" aria-haspopup="true" aria-expanded="false">
+              Articles <i class="fas fa-caret-down"></i>
+            </a>
+            <ul class="dropdown-menu" aria-label="submenu">
+              <li><a href="cybersecurity.html" class="active">Cybersecurity</a></li>
+              <li><a href="ai.html">AI</a></li>
+              <li><a href="fullstack.html">Full-Stack</a></li>
+            </ul>
+          </li>
+          
+          <li><a href="about.html">About</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+
+        <button
+          class="hamburger"
+          aria-label="Toggle menu"
+          aria-expanded="false"
+        >
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </button>
+      </nav>
     </div>
+  </header>
 
-    <!-- Header -->
-    <header class="main-header">
-        <div class="container">
-            <div class="logo">
-                <h1>Tech<span>Insight</span></h1>
-            </div>
-            <nav>
-                <ul class="nav-menu">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="cybersecurity.html" class="active">CyberSecurity</a></li>
-                    <li><a href="ai.html">AI/ML</a></li>
-                    <li><a href="fullstack.html">Full Stack</a></li>
-                </ul>
-                <div class="hamburger">
-                    <span class="bar"></span>
-                    <span class="bar"></span>
-                    <span class="bar"></span>
-                </div>
-            </nav>
+  <!-- Hero Section -->
+  <section class="hero category-hero">
+    <div class="container hero-content">
+      <h2>CyberSecurity Essentials</h2>
+      <p>Protecting digital assets in modern infrastructure</p>
+    </div>
+  </section>
+
+  <!-- Cybersecurity Articles -->
+  <main class="container">
+    <section class="article-grid">
+      <article class="article-card" data-category="network-security">
+        <img
+          src="images/network-security.webp"
+          alt="Network security diagram"
+          loading="lazy"
+        />
+        <div class="article-content">
+          <span class="category-tag cyber">Network Security</span>
+          <h3>Zero Trust Architecture Implementation</h3>
+          <div class="article-meta">
+            <span><i class="fas fa-calendar-alt"></i> March 15, 2025</span>
+            <span><i class="fas fa-clock"></i> 8 min read</span>
+          </div>
+          <p>
+            Explore how Zero Trust Architecture minimizes risk by enforcing
+            continuous verification, microsegmentation, and least-privilege
+            access in enterprise networks.
+          </p>
+          <a href="#" class="read-more"
+            >Read Full Article <i class="fas fa-arrow-right"></i
+          ></a>
         </div>
-    </header>
+      </article>
 
-    <!-- Main Content -->
-    <main class="container">
-        <section class="category-hero">
-            <h1>CyberSecurity Essentials</h1>
-            <p>Protecting digital assets in modern infrastructure</p>
-        </section>
+      <article class="article-card" data-category="encryption">
+        <img
+          src="images/encryption-methods.webp"
+          alt="Illustration of encryption algorithms"
+          loading="lazy"
+        />
+        <div class="article-content">
+          <span class="category-tag cyber">Encryption</span>
+          <h3>Post-Quantum Cryptography Fundamentals</h3>
+          <div class="article-meta">
+            <span><i class="fas fa-calendar-alt"></i> March 12, 2025</span>
+            <span><i class="fas fa-clock"></i> 10 min read</span>
+          </div>
+          <p>
+            Understand lattice-based and hash-based schemes that resist
+            quantum attacks, preparing your data for the next generation of
+            cryptographic security.
+          </p>
+          <a href="#" class="read-more"
+            >Read Full Article <i class="fas fa-arrow-right"></i
+          ></a>
+        </div>
+      </article>
+    </section>
+  </main>
 
-        <section class="articles-grid">
-            <!-- Article 1 -->
-            <article class="article-card" data-category="network-security">
-                <div class="article-image">
-                    <img src="images/network-security.webp" alt="Network security diagram" loading="lazy">
-                </div>
-                <div class="article-content">
-                    <span class="article-tag">Network Security</span>
-                    <h2>Zero Trust Architecture Implementation</h2>
-                    <div class="article-meta">
-                        <span><i class="fas fa-calendar-alt"></i> March 15, 2025</span>
-                        <span><i class="fas fa-clock"></i> 8 min read</span>
-                    </div>
-                    <p>Modern approaches to securing enterprise networks through continuous verification...</p>
-                    <a href="#" class="read-more">Read Full Article <i class="fas fa-arrow-right"></i></a>
-                </div>
-            </article>
-
-            <!-- Article 2 -->
-            <article class="article-card" data-category="encryption">
-                <div class="article-image">
-                    <img src="images/encryption-methods.webp" alt="Encryption algorithms" loading="lazy">
-                </div>
-                <div class="article-content">
-                    <span class="article-tag">Encryption</span>
-                    <h2>Post-Quantum Cryptography Fundamentals</h2>
-                    <div class="article-meta">
-                        <span><i class="fas fa-calendar-alt"></i> March 12, 2025</span>
-                        <span><i class="fas fa-clock"></i> 10 min read</span>
-                    </div>
-                    <p>Preparing for quantum computing threats with lattice-based cryptography...</p>
-                    <a href="#" class="read-more">Read Full Article <i class="fas fa-arrow-right"></i></a>
-                </div>
-            </article>
-        </section>
-    </main>
-
-    <!-- Footer -->
-    <footer class="main-footer">
-        <!-- Copy footer structure from index.html -->
-    </footer>
-
-    <script src="js/theme.js"></script>
-    <script src="js/main.js"></script>
+  <script src="js/theme.js"></script>
+  <script src="js/main.js"></script>
 </body>
 </html>
